--- a/04_R_M3_1_ann_intro_v6_Keras.ipynb
+++ b/04_R_M3_1_ann_intro_v6_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVyxC9R/ZLZDBb33FNIEvx",
+      "authorship_tag": "ABX9TyOB1VG94rDJrQnPIei5/xYS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1022,18 +1022,18 @@
         "\n",
         "For a linear regression model with $( y_i = w_ix_i )$, the gradient of the MSE with respect to the weight $( w )$ is:\n",
         "\n",
-        "$\\frac{\\partial L}{\\partial w} = \\frac{2}{N} \\sum_{i=1}^{N} x_i(y_i - t_i)$\n",
+        "$\\frac{\\partial L}{\\partial w} = \\frac{2}{N} \\sum_{i=1}^{N} x_i(t_i - y_i)$\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "### Explanation:\n",
         "\n",
-        "1. The derivative of $(y_i - t_i)^2$ with respect to $( y_i )$ is $2(y_i - t_i)$.\n",
-        "2. For $( y_i = w_ix_i )$, the derivative of $( y_i )$ with respect to $( w_i )$ is $( x_i )$.\n",
-        "3. Using the chain rule, the derivative of the loss with respect to $( w_i )$ is $( 2(y_i - t_i) \\times x_i )$.\n",
+        "1. The derivative of $(y_i - t_i)^2$ with respect to $( y_i )$ is $2(t_i - y_i)$.\n",
+        "2. For $( y_i = w_ix_i )$, the derivative of $( y_i )$ with respect to $( w_i )$ is $(- x_i )$.\n",
+        "3. Using the chain rule, the derivative of the loss with respect to $( w_i )$ is $( 2(y_i - t_i) \\times - x_i )$.\n",
         "4. Averaging over all data points gives the gradient:\n",
-        "$\\frac{\\partial L}{\\partial w} = \\frac{2}{N} \\sum_{i=1}^{N} x_i(y_i - t_i)$\n",
+        "$\\frac{\\partial L}{\\partial w} = \\frac{2}{N} \\sum_{i=1}^{N} x_i(t_i - y_i)$\n",
         "\n",
         "This gradient provides direction and magnitude to adjust \\( w \\) to minimize the loss during gradient descent.\n"
       ],
