--- a/05_M3_1_RNN_Tutorial_v2_R_Solutions.ipynb
+++ b/05_M3_1_RNN_Tutorial_v2_R_Solutions.ipynb
@@ -272,6 +272,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "![](https://raw.githubusercontent.com/HamidBekamiri/Econometrics-II/refs/heads/main/images/RNN_Formula.png)"
+      ],
+      "metadata": {
+        "id": "P09PrK1mlXVc"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "lyzMY5Q8sTWK"
       },
@@ -416,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -522,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -566,7 +575,7 @@
       "metadata": {
         "id": "xGCelJZ1rkaW"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -588,7 +597,7 @@
         "id": "QVTfSvempr8s",
         "outputId": "327d4bd3-fed3-4670-9024-a8de9b71bc27"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -634,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -702,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -767,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -879,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "lPux5Y4VkPaO"
       },
@@ -925,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1009,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1058,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "id": "ECXiS9r0oy2s"
       },
@@ -1080,7 +1089,7 @@
         "id": "CmQS2QJ0WVHt",
         "outputId": "b81d9478-df91-44a5-9507-914c3f3a091a"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1105,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "metadata": {
         "id": "Igj1Cg_QoyYA"
       },
@@ -1118,7 +1127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1149,7 +1158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "id": "ell1-JiFtznL"
       },
@@ -1161,7 +1170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1205,8 +1214,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Let's break it down layer by layer:\n",
+        "\n",
+        "**SimpleRNN Layer (2,600 parameters):** A SimpleRNN cell has three sets of weights:\n",
+        "\n",
+        "- **wi** (input weights)\n",
+        "- **wR** (recurrent weights)\n",
+        "- **bh** (bias terms)\n",
+        "\n",
+        "**Given:**\n",
+        "- Input features (**n_features**) = 1 (from x0, x1, x2 in the image)\n",
+        "- Hidden units = 50 (from model definition)\n",
+        "\n",
+        "**Therefore:**\n",
+        "- **Input weights (wi)**: \\( 1 \\times 50 = 50 \\) parameters\n",
+        "- **Recurrent weights (wR)**: \\( 50 \\times 50 = 2,500 \\) parameters\n",
+        "- **Bias terms (bh)**: 50 parameters\n",
+        "\n",
+        "**Total SimpleRNN parameters**: \\( 50 + 2,500 + 50 = 2,600 \\)\n",
+        "\n",
+        "**Dense Layer (51 parameters)**\n",
+        "The dense layer transforms the 50-dimensional RNN output to a single output:\n",
+        "\n",
+        "- **Weights (wy)**: \\( 50 \\times 1 = 50 \\) parameters\n",
+        "- **Bias (by)**: 1 parameter\n",
+        "\n",
+        "**Total Dense parameters**: \\( 50 + 1 = 51 \\)\n",
+        "\n",
+        "**Total Model Parameters**\n",
+        "**Total model parameters**: \\( 2,600 + 51 = 2,651 \\)\n"
+      ],
+      "metadata": {
+        "id": "oZ_YjWVloGLw"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1283,7 +1330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1323,7 +1370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1366,7 +1413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "cDiSUxkEwEYk"
       },
@@ -1377,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": null,
       "metadata": {
         "id": "kUYCgjhtuLiV"
       },
@@ -1400,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1449,7 +1496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": null,
       "metadata": {
         "id": "mkuquTtsxrXc"
       },
@@ -1461,7 +1508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1495,7 +1542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": null,
       "metadata": {
         "id": "BiuQExDbxtcX"
       },
@@ -1507,7 +1554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1553,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1613,7 +1660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1670,7 +1717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1754,7 +1801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": null,
       "metadata": {
         "id": "mykJvFXI1HiS"
       },
@@ -1769,7 +1816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1800,7 +1847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": null,
       "metadata": {
         "id": "LBFQUd-96QbQ"
       },
@@ -1812,7 +1859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1857,7 +1904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1934,7 +1981,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": null,
       "metadata": {
         "id": "ZS8BXDic6fxf"
       },
@@ -1957,7 +2004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2006,7 +2053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 182,
+      "execution_count": null,
       "metadata": {
         "id": "WzVUdVt37a8y"
       },
@@ -2018,7 +2065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2052,7 +2099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": null,
       "metadata": {
         "id": "rnaI7_Kj9uKY"
       },
@@ -2064,7 +2111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2120,7 +2167,7 @@
         "id": "FnHFUk0wZwlL",
         "outputId": "40564e05-385b-4492-d452-679e01349090"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2156,7 +2203,7 @@
         "id": "pF_90_RvVdr0",
         "outputId": "9ab66f61-a5c3-458c-df04-add01b89dfa8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2274,7 +2321,7 @@
         "id": "SOcgaOQua8Gp",
         "outputId": "258a55c0-c1a9-455d-9e9a-a0a6ed4e834f"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2332,7 +2379,7 @@
       "metadata": {
         "id": "vXTkhwQbdAIX"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2348,7 +2395,7 @@
         "id": "zwMLh5sxd_nv",
         "outputId": "69cc7a6d-14c4-4ed6-e258-c414b8b90973"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2497,7 +2544,7 @@
         "id": "P0FwWJawf5iY",
         "outputId": "d1c54940-6384-4e3e-fb00-e721f2a4cd79"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2657,7 +2704,7 @@
         "id": "PyqACrh8iHE5",
         "outputId": "8d219819-dc4b-4b02-c8d4-c0c60457db4f"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2680,7 +2727,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWYD7gK5IFRy3paMxLx2zR",
+      "authorship_tag": "ABX9TyMSgc0sc9iBhHDCXRpyig2C",
       "include_colab_link": true
     },
     "kernelspec": {
