--- a/05_M3_1_RNN_Tutorial_v2_R.ipynb
+++ b/05_M3_1_RNN_Tutorial_v2_R.ipynb
@@ -272,6 +272,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "![](https://raw.githubusercontent.com/HamidBekamiri/Econometrics-II/refs/heads/main/images/RNN_Formula.png)"
+      ],
+      "metadata": {
+        "id": "VkBr1aPerHBt"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "lyzMY5Q8sTWK"
       },
@@ -1203,6 +1212,44 @@
         "\n",
         "summary(model)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Let's break it down layer by layer:\n",
+        "\n",
+        "**SimpleRNN Layer (2,600 parameters):** A SimpleRNN cell has three sets of weights:\n",
+        "\n",
+        "- **wi** (input weights)\n",
+        "- **wR** (recurrent weights)\n",
+        "- **bh** (bias terms)\n",
+        "\n",
+        "**Given:**\n",
+        "- Input features (**n_features**) = 1 (from x0, x1, x2 in the image)\n",
+        "- Hidden units = 50 (from model definition)\n",
+        "\n",
+        "**Therefore:**\n",
+        "- **Input weights (wi)**: \\( 1 \\times 50 = 50 \\) parameters\n",
+        "- **Recurrent weights (wR)**: \\( 50 \\times 50 = 2,500 \\) parameters\n",
+        "- **Bias terms (bh)**: 50 parameters\n",
+        "\n",
+        "**Total SimpleRNN parameters**: \\( 50 + 2,500 + 50 = 2,600 \\)\n",
+        "\n",
+        "**Dense Layer (51 parameters)**\n",
+        "The dense layer transforms the 50-dimensional RNN output to a single output:\n",
+        "\n",
+        "- **Weights (wy)**: \\( 50 \\times 1 = 50 \\) parameters\n",
+        "- **Bias (by)**: 1 parameter\n",
+        "\n",
+        "**Total Dense parameters**: \\( 50 + 1 = 51 \\)\n",
+        "\n",
+        "**Total Model Parameters**\n",
+        "**Total model parameters**: \\( 2,600 + 51 = 2,651 \\)"
+      ],
+      "metadata": {
+        "id": "8pobFu_YrOy_"
+      }
     },
     {
       "cell_type": "code",
@@ -2198,7 +2245,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOI25oP+yBM4lTsTX3UKbtM",
+      "authorship_tag": "ABX9TyMubp42yy9PiMPJo5QH56fF",
       "include_colab_link": true
     },
     "kernelspec": {
