--- a/04_R_M3_1_ann_intro_v6_Keras.ipynb
+++ b/04_R_M3_1_ann_intro_v6_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOB1VG94rDJrQnPIei5/xYS",
+      "authorship_tag": "ABX9TyNY0qouJNR7DXEScz/5L/k6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +95,26 @@
       ],
       "metadata": {
         "id": "evhlndvXkzzx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Types of Activation Functions\n",
+        "\n",
+        "Activation functions are crucial in neural networks as they introduce non-linearity, allowing the network to solve complex problems and make predictions or classifications."
+      ],
+      "metadata": {
+        "id": "ZPbiUgGyeaNe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://raw.githubusercontent.com/aaubs/ds-master/main/data/Images/activation_functions.png)"
+      ],
+      "metadata": {
+        "id": "GHPSh2-5eWL3"
       }
     },
     {
@@ -1735,12 +1755,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define Callbacks\n",
+        "# Early stopping callback to prevent overfitting\n",
         "callbacks_list <- list(\n",
         "  callback_early_stopping(\n",
         "    monitor = \"val_loss\",\n",
-        "    patience = 10,\n",
-        "    restore_best_weights = TRUE\n",
+        "    patience = 10,     # Number of epochs with no improvement before stopping\n",
+        "    restore_best_weights = TRUE # Restore model weights to the best observed performance\n",
         "  )\n",
         ")\n",
         "\n",
@@ -1804,6 +1824,25 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### hidden_layer (Dense)\n",
+        "- **Output Shape:** `(None, 64)`\n",
+        "  - The `None` means the batch size is flexible (it could vary with each training batch), and `64` indicates that this layer has 64 neurons.\n",
+        "- **Param #:** `128`\n",
+        "  - This layer has 128 parameters in total, calculated as the number of input units $$number of output units + bias$$\n",
+        "\n",
+        "#### output_layer (Dense)\n",
+        "- **Output Shape:** `(None, 1)`\n",
+        "  - The output shape `(None, 1)` indicates one output neuron, suitable for regression or binary classification tasks.\n",
+        "- **Param #:** `65`\n",
+        "  - Calculated as $$64 \\times 1 + 1 = 65$$, where 64 is the input from the hidden layer, 1 is the output neuron, and an additional bias term is added.\n"
+      ],
+      "metadata": {
+        "id": "Lb5y96dQep48"
+      }
     },
     {
       "cell_type": "code",
