--- a/04_R_M3_1_ann_intro_v6_Keras_Solutions.ipynb
+++ b/04_R_M3_1_ann_intro_v6_Keras_Solutions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOX90Em7FWkGCndOM9FUal2",
+      "authorship_tag": "ABX9TyNbqr3OpSRIGEiMr5w+xNsE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,6 +95,26 @@
       ],
       "metadata": {
         "id": "evhlndvXkzzx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Types of Activation Functions\n",
+        "\n",
+        "Activation functions are crucial in neural networks as they introduce non-linearity, allowing the network to solve complex problems and make predictions or classifications."
+      ],
+      "metadata": {
+        "id": "4zvMHoILgfN6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://raw.githubusercontent.com/aaubs/ds-master/main/data/Images/activation_functions.png)"
+      ],
+      "metadata": {
+        "id": "7ViC5mw-gcGR"
       }
     },
     {
@@ -1564,7 +1584,7 @@
         "id": "pRhmErSwb2I4",
         "outputId": "74cb9959-e920-4834-ed0a-eb4edfc91f1e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1735,12 +1755,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define Callbacks\n",
+        "# Early stopping callback to prevent overfitting\n",
         "callbacks_list <- list(\n",
         "  callback_early_stopping(\n",
         "    monitor = \"val_loss\",\n",
-        "    patience = 10,\n",
-        "    restore_best_weights = TRUE\n",
+        "    patience = 10,     # Number of epochs with no improvement before stopping\n",
+        "    restore_best_weights = TRUE # Restore model weights to the best observed performance\n",
         "  )\n",
         ")\n",
         "\n",
@@ -1804,6 +1824,25 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### hidden_layer (Dense)\n",
+        "- **Output Shape:** `(None, 64)`\n",
+        "  - The `None` means the batch size is flexible (it could vary with each training batch), and `64` indicates that this layer has 64 neurons.\n",
+        "- **Param #:** `128`\n",
+        "  - This layer has 128 parameters in total, calculated as the number of input units $$number of output units + bias$$\n",
+        "\n",
+        "#### output_layer (Dense)\n",
+        "- **Output Shape:** `(None, 1)`\n",
+        "  - The output shape `(None, 1)` indicates one output neuron, suitable for regression or binary classification tasks.\n",
+        "- **Param #:** `65`\n",
+        "  - Calculated as $$64 \\times 1 + 1 = 65$$, where 64 is the input from the hidden layer, 1 is the output neuron, and an additional bias term is added."
+      ],
+      "metadata": {
+        "id": "xWUShJ2FgS1f"
+      }
     },
     {
       "cell_type": "code",
@@ -2183,7 +2222,7 @@
         "id": "FYj3efg0xiJA",
         "outputId": "2aa7135c-0d67-4300-f82b-a8c1d174b19c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2267,7 +2306,7 @@
         "id": "THLcL7WrzQKu",
         "outputId": "a1731f05-453a-4021-96da-e9c5ef80c8f5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2412,7 +2451,7 @@
         "id": "vWSZhb9U1uO-",
         "outputId": "1854aab4-f50f-4dbb-fe19-8f2a15078bb1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2443,7 +2482,7 @@
         "id": "lZLso65U2wNw",
         "outputId": "08524d9c-62d5-43c4-a77a-d285d6c0f1c3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2479,7 +2518,7 @@
         "id": "9lY90bpc255h",
         "outputId": "93640e22-0de2-4f52-80a7-92d0c4bfaf4a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2716,7 +2755,7 @@
         "id": "u_bNNqcF47_D",
         "outputId": "ffe33b07-a55f-4c13-c8be-9797b56f0614"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
